trying to figure out hemispheres, changed from tif to jpg file

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "4a22fcac",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Dependencies\n",
     "from splinter import Browser\n",
@@ -10,48 +13,49 @@
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
     "import pandas as pd"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "# Setup splinter\n",
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
-   ],
+   "id": "054b0ac8",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 94.0.4606\n",
       "Get LATEST driver version for 94.0.4606\n",
-      "Get LATEST driver version for 94.0.4606\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/bradleybarker/.wdm/drivers/chromedriver/mac64/94.0.4606.61]\n"
+      "Driver [/Users/bradleybarker/.wdm/drivers/chromedriver/mac64/94.0.4606.61/chromedriver] found in cache\n"
      ]
     }
    ],
-   "metadata": {
-    "scrolled": false
-   }
+   "source": [
+    "# Setup splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "b6457562",
+   "metadata": {},
    "source": [
     "# NASA Mars News"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "9c0fb715",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "url = 'https://redplanetscience.com/'\n",
@@ -61,59 +65,64 @@
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(browser.html, 'html.parser')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "print(soup.select_one('div.list_text'))"
-   ],
+   "id": "6d2658a2",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<div class=\"list_text\">\n",
-      "<div class=\"list_date\">October 11, 2021</div>\n",
-      "<div class=\"content_title\">Alabama High School Student Names NASA's Mars Helicopter</div>\n",
-      "<div class=\"article_teaser_body\">Vaneeza Rupani's essay was chosen as the name for the small spacecraft, which will mark NASA's first attempt at powered flight on another planet.</div>\n",
+      "<div class=\"list_date\">October 13, 2021</div>\n",
+      "<div class=\"content_title\">NASA to Reveal Name of Its Next Mars Rover</div>\n",
+      "<div class=\"article_teaser_body\">After a months-long contest among students to name NASA's newest Mars rover, the agency will reveal the winning name — and the winning student — this Thursday. </div>\n",
       "</div>\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(soup.select_one('div.list_text'))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "f460bc1d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "news_title = soup.find_all('div', class_='col-md-8')[0].find('div',class_='content_title').text"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "da69eb74",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "news_p = soup.find_all('div', class_='col-md-8')[0].find('div',class_='article_teaser_body').text"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "86d998bb",
+   "metadata": {},
    "source": [
     "# JPL Mars Space Images"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "b690b360",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "images_url = 'https://spaceimages-mars.com/'\n",
@@ -123,56 +132,54 @@
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(browser.html, 'html.parser')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "2f7c5263",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "img_url_ext = soup.find_all('a', class_='showimg fancybox-thumbs')[0].attrs['href']\n",
     "featured_image_url = images_url + img_url_ext\n",
     "print(featured_image_url)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "fe1bfc8f",
+   "metadata": {},
    "source": [
     "# Mars Facts"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "9fe0cf9d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "facts_url = 'https://galaxyfacts-mars.com/'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "source": [
-    "tables = pd.read_html(facts_url)\n",
-    "tables"
-   ],
+   "id": "829df80e",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[                         0                1                2\n",
@@ -195,23 +202,23 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "tables = pd.read_html(facts_url)\n",
+    "tables"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "source": [
-    "mars_facts_df = tables[1]\n",
-    "mars_facts_df.columns = [\"Fact Descriptor\", \"Value\"]\n",
-    "mars_facts_df"
-   ],
+   "id": "60b2b389",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -299,43 +306,48 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "mars_facts_df = tables[1]\n",
+    "mars_facts_df.columns = [\"Fact Descriptor\", \"Value\"]\n",
+    "mars_facts_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "source": [
-    "mars_facts_html_table = mars_facts_df.to_html()\n",
-    "mars_facts_html_table"
-   ],
+   "id": "eaaa97e4",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Fact Descriptor</th>\\n      <th>Value</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "mars_facts_html_table = mars_facts_df.to_html()\n",
+    "mars_facts_html_table"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "source": [
-    "print(mars_facts_html_table)"
-   ],
+   "id": "3d99d63b",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<table border=\"1\" class=\"dataframe\">\n",
       "  <thead>\n",
@@ -396,18 +408,24 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "print(mars_facts_html_table)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "5e06bab6",
+   "metadata": {},
    "source": [
     "# Mars Hemispheres"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "2d501883",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "hemi_url = 'https://marshemispheres.com/'\n",
@@ -417,13 +435,22 @@
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
     "soup = BeautifulSoup(browser.html, 'html.parser')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
+   "id": "f0c914bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title_list: ['Cerberus Hemisphere Enhanced', 'Schiaparelli Hemisphere Enhanced', 'Syrtis Major Hemisphere Enhanced', 'Valles Marineris Hemisphere Enhanced'], url_list: ['https://marshemispheres.com/images/full.jpg', 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg', 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg', 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg']\n"
+     ]
+    }
+   ],
    "source": [
     "mars_hemispheres = soup.find_all('div', class_='item')\n",
     "\n",
@@ -445,7 +472,7 @@
     "    img_page_soup = BeautifulSoup(browser.html, 'html.parser')\n",
     "    \n",
     "    # Locate image url for full-resolution photo\n",
-    "    img_url = img_page_soup.find('div', class_='downloads').find_all('li')[1].find('a')['href']\n",
+    "    img_url = img_page_soup.find('div', class_='downloads').find_all('li')[0].find('a')['href']\n",
     "    \n",
     "    # Append image urls to a list \n",
     "    url_list.append(f'{hemi_url}{img_url}')\n",
@@ -455,30 +482,42 @@
     "    \n",
     "\n",
     "print(f'title_list: {title_list}, url_list: {url_list}')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "title_list: ['Cerberus Hemisphere Enhanced', 'Schiaparelli Hemisphere Enhanced', 'Syrtis Major Hemisphere Enhanced', 'Valles Marineris Hemisphere Enhanced'], url_list: ['https://marshemispheres.com/images/cerberus_enhanced.tif', 'https://marshemispheres.com/images/schiaparelli_enhanced.tif', 'https://marshemispheres.com/images/syrtis_major_enhanced.tif', 'https://marshemispheres.com/images/valles_marineris_enhanced.tif']\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
+   "id": "f5e1187b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "browser.quit()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
+   "id": "0c682c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a list of dictionaries \n",
     "hemisphere_image_urls = []\n",
@@ -487,27 +526,7 @@
     "    hemisphere_image_urls.append({\"title\": i, \"img_url\": j})\n",
     "    \n",
     "hemisphere_image_urls"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
-       "  'img_url': 'https://marshemispheres.com/images/cerberus_enhanced.tif'},\n",
-       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
-       "  'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced.tif'},\n",
-       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
-       "  'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced.tif'},\n",
-       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
-       "  'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced.tif'}]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 67
-    }
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
